unit test implementation and documentation additions

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,8 @@
 				</div>
 				<button type="submit" class="btn btn-default">Submit</button>  
 	        </form>
+	        <br />
+	        <a href="/swagger-ui.html" target="_blank">swagger doc</a>
         </div>
     </body>
 </html>
