--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">         
         <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" />
+        <link rel="icon" href="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/512/weather-icon.png">
         <style>
             body {
                 padding: 15px;
